--- a/src/app/model/referral/list/list-referral.component.css
+++ b/src/app/model/referral/list/list-referral.component.css
@@ -6,4 +6,5 @@
 .table-cell {
   padding-top: 2px;
   padding-bottom: 2px;
+  margin:0;
 }
